--- a/.gitmodules
+++ b/.gitmodules
@@ -3,10 +3,10 @@
 	url = https://github.com/exalted/GMGridView.git
 [submodule "Libraries/nimbus"]
 	path = Libraries/nimbus
-	url = git://github.com/jverkoey/nimbus.git
+	url = https://github.com/raja-baz/nimbus.git
 [submodule "Libraries/PTImageAlbumViewController"]
 	path = Libraries/PTImageAlbumViewController
-	url = https://github.com/exalted/PTImageAlbumViewController.git
+	url = https://github.com/raja-baz/PTImageAlbumViewController.git
 [submodule "Libraries/SDURLCache"]
 	path = Libraries/SDURLCache
 	url = git://github.com/rs/SDURLCache.git
